Update 02 Standard Normalization.ipynb

--- a/02 Standard Normalization.ipynb
+++ b/02 Standard Normalization.ipynb
@@ -109,7 +109,7 @@
     "yt1 = weight_history[-1][0] + weight_history[-1][1] * x[0]\n",
     "plt.scatter(x,y,color = 'k',edgecolor = 'w')\n",
     "plt.plot(x[0],yt1)\n",
-    "plt.legend(['nonstandardized prediction'],loc='center left', bbox_to_anchor=(1, 0.5))\n",
+    "plt.legend(['nonstandardized input'],loc='center left', bbox_to_anchor=(1, 0.5))\n",
     "plt.show()"
    ]
   },
