Update 06 Commodity Price Forecasting.ipynb

--- a/06 Commodity Price Forecasting.ipynb
+++ b/06 Commodity Price Forecasting.ipynb
@@ -19,7 +19,7 @@
     "import autograd.numpy as np\n",
     "import reinforcement_learning\n",
     "import matplotlib.pyplot as plt\n",
-    "from custom_library import variable_order_plotters as plotter\n",
+    "import variable_order_plotters as plotter\n",
     "\n",
     "%matplotlib notebook\n",
     "from matplotlib import rcParams\n",
